# labs_oop

./: CMakeLists.txt  README.md
Google_Tests/: CMakeLists.txt  sol_tests.cpp
include/: solution.h
src/: CMakeLists.txt  main.cpp  solution.cpp
